# CryptoGL

./: .gitignore  Adfgvx.cpp  Adfgvx.h  Adfgvx.hpp  AsymmetricCipher.cpp  AsymmetricCipher.hpp  BufferCipher.cpp  BufferCipher.h  ByteCipher.cpp  ByteCipher.h  CMakeLists.txt  Caesar.cpp  Caesar.hpp  Cesar.cpp  Cesar.h  Cipher.hpp  Collon.cpp  Collon.h  Collon.hpp  CryptoCode.dia  CryptoGL_Specifications.aux  CryptoGL_Specifications.toc  Cryptology.dia  DES.cpp  DES.hpp  Data.cpp  Data.h  Delastelle.cpp  Delastelle.hpp  Feistel.hpp  Fleissner.cpp  Fleissner.h  Fleissner.hpp  FrequenciesAnalysis.cpp  FrequenciesAnalysis.hpp  HashFunctions.cpp  HashFunctions.hpp  Hellman.cpp  Hellman.hpp  Hill.cpp  (+64 more)
UML/: AsymmetricCipher.dia  Cipher_High_Level.dia  HashFunction.dia  MAC.dia  PseudoRandomFunction.dia  SpongeFunction.dia  StringCipher.dia  SymmetricCipher.dia
UnitTests/: AESTest.hpp  AdfgvxTest.hpp  Adler32Test.hpp  AffineTest.hpp  Base64Test.hpp  BeaufortGermanTest.hpp  BeaufortTest.hpp  BlakeTest.hpp  BlowfishTest.hpp  CAST128Test.hpp  CAST256Test.hpp  CaesarTest.hpp  CamelliaTest.hpp  ChaoTest.hpp  CollonTest.hpp  DESTest.hpp  DelastelleTest.hpp  Dijkstra7Normal.txt  FleissnerTest.hpp  FourSquaresTest.hpp  GraphTest.hpp  GronsfeldTest.hpp  HC256Test.hpp  HellmanMerkleKnapsackTest.hpp  HillTest.hpp  IDEATest.hpp  InitUnitTests.hpp  KeccakTest.hpp  LRCTest.hpp  MD2Test.hpp  MD4Test.hpp  MD5Test.hpp  MorseTest.hpp  Mysty1Test.hpp  NihilistesTest.hpp  NoekeonTest.hpp  PlayfairTest.hpp  PolybeTest.hpp  QuickSortTest.hpp  RC2Test.hpp  (+45 more)
doc/: CRYPTANALYSIS_EDUCATIONAL_GUIDE.html  CryptoGL_Specifications.tex  SERPENT_EDUCATIONAL_GUIDE.html
src/: AES.cpp  AES.hpp  Adfgvx.cpp  Adfgvx.hpp  Adler32.cpp  Adler32.hpp  Affine.cpp  Affine.hpp  AsymmetricCipher.cpp  AsymmetricCipher.hpp  BadAlpha.cpp  BadAlpha.hpp  BadChar.cpp  BadChar.hpp  BadKey.cpp  BadKey.hpp  BadKeyLength.cpp  BadKeyLength.hpp  BadLength.hpp  Base64.cpp  Base64.hpp  BigEndian.hpp  Bits.cpp  Bits.hpp  Blake.cpp  Blake.hpp  BlockCipher.cpp  BlockCipher.hpp  BlockCipherCBCStrategy.cpp  BlockCipherCBCStrategy.hpp  BlockCipherECBStrategy.cpp  BlockCipherECBStrategy.hpp  BlockCipherModes.cpp  BlockCipherModes.hpp  BlockCipherOperationModes.hpp  BlockCipherStrategy.cpp  BlockCipherStrategy.hpp  Blowfish.cpp  Blowfish.hpp  CAST128.cpp  (+191 more)
src/attacks/: Attack.hpp  CaesarAttack.cpp  CaesarAttack.hpp  caesar_attack.txt  caesar_attack2.txt  cipher_text.txt  mtc3-esslinger-05-caesar.txt
src/big_integers/: CMakeLists.txt
src/cryptanalysis/: ClassicalAnalysis.cpp  ClassicalAnalysis.hpp
src/exceptions/: BadAlpha.hpp  BadAlphaLength.hpp  BadChar.hpp  BadGridDimension.cpp  BadGridDimension.hpp  BadKey.hpp  BadKeyLength.cpp  BadKeyLength.hpp  BadLength.cpp  BadLength.hpp  BadMatrix.cpp  BadMatrix.hpp  BadModulo.cpp  BadModulo.hpp  EmptyAlpha.hpp  EmptyGridKey.cpp  EmptyGridKey.hpp  EmptyKey.cpp  EmptyKey.hpp  EmptyMatrix.hpp  Exception.hpp  IntegersNotCoprime.cpp  IntegersNotCoprime.hpp  KeyNotSuperIncreasing.cpp  KeyNotSuperIncreasing.hpp  MatrixKeyNotReversible.hpp  MatrixNotSquare.cpp  MatrixNotSquare.hpp  MatrixOutOfRange.cpp  MatrixOutOfRange.hpp  MultipleChar.cpp  MultipleChar.hpp
testing/: AESTest.hpp  AdfgvxTest.hpp  Adler32Test.hpp  AffineTest.hpp  Base64Test.hpp  BeaufortGermanTest.cpp  BeaufortGermanTest.hpp  BeaufortTest.hpp  BlakeTest.hpp  BlowfishTest.hpp  CAST128Test.hpp  CAST256Test.hpp  CMakeLists.txt  CaesarTest.cpp  CaesarTest.hpp  CamelliaTest.hpp  ChaoTest.hpp  CollonTest.hpp  DESTest.cpp  DESTest.hpp  DelastelleTest.cpp  DelastelleTest.hpp  FleissnerTest.hpp  FourSquaresTest.hpp  GronsfeldTest.hpp  HC256Test.hpp  HellmanMerkleKnapsackTest.hpp  HellmanTest.cpp  HellmanTest.hpp  HillTest.hpp  IDEATest.hpp  KeccakTest.hpp  LRCTest.hpp  MD2Test.hpp  MD4Test.hpp  MD5Test.hpp  MorseTest.cpp  MorseTest.hpp  Mysty1Test.hpp  NihilistesTest.hpp  (+49 more)
